--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">LoadImageLib</string>
+    <string name="push_url">push url</string>
+    <string name="push">push</string>
+    <string name="error">Error</string>
+    <string name="enter_url">Enter url</string>
+    <string name="success">success</string>
 </resources>
